# mc_stats_leaderboard

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.sh
data_example/: 4658c32b-0e9e-4070-949c-b454aad5b43f.json
frontend/: index.html  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  groups.ts  index.css  index.tsx  statNames.ts  utils.ts
frontend/src/components/: Card.tsx  Header.tsx  ImgBtn.tsx  ScrollDetector.tsx  SearchSelect.tsx  Select.tsx
src/: frontend.rs  main.rs  stats.rs
src/stats/: usernames.rs
