[package]
name = "mc_stats_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
json = "0.12.4"
once_cell = "1.17.1"
reqwest = "0.11.14"
serde = { version = "1.0.156", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "fs"] }
