[package]
name = "mc_stats_viewer"
version = "0.1.0"
edition = "2021"
authors = ["Matvey Ryabchikov"]
license = "BSD-2-Clause"
description = "A simple web server that displays statistics leaderboards for your Minecraft server"
repository = "https://github.com/ronanru/mc_stats_viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
clap = { version = "4.1.9", features = ["derive"] }
json = "0.12.4"
once_cell = "1.17.1"
reqwest = "0.11.14"
serde = { version = "1.0.156", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "fs"] }
